//=============================================================================
//
// file :        FitGaussian.h
//
// description : Include for the FitGaussian class.
//
// project :	Fit Gaussian
//
// $Author:  $
//
// $Revision:  $
// $Date:  $
//
// SVN only:
// $HeadURL: $
//
// CVS only:
// $Source:  $
// $Log:  $
//
// copyleft :    Synchrotron SOLEIL 
//               L'Orme des merisiers - Saint Aubin
//		 BP48 - 91192 Gif sur Yvette
//               FRANCE
//
//=============================================================================
//
//  		This file is generated by POGO
//	(Program Obviously used to Generate tango Object)
//
//         (c) - Software Engineering Group - ESRF
//=============================================================================
#ifndef _FITGAUSSIAN_H
#define _FITGAUSSIAN_H

#include <tango.h>
//using namespace Tango;

#include "Factory.h"
#include <yat4tango/PropertyHelper.h>
#include <yat/threading/Mutex.h>
#include <yat/utils/XString.h>
#include <yat/time/Timer.h>
#include <yat/utils/StringTokenizer.h>
#include <yat/utils/String.h>

#include "lima/HwInterface.h"
#include "lima/CtControl.h"
#include "lima/CtAcquisition.h"
#include "lima/CtImage.h"
#include "lima/SoftOpId.h"
#include "lima/SoftOpExternalMgr.h"
#include "processlib/Data.h"
#include "processlib/TaskMgr.h"
#include <map>

//-Fit
#include "FitTask.h"


//- OpenCV
#include "opencv2/core/core.hpp"
#include "opencv2/highgui/highgui.hpp"
#include "opencv2/imgproc/imgproc.hpp"

#define MAX_ATTRIBUTE_STRING_LENGTH 	256
#define CURRENT_VERSION                 "1.0.0"

/**
 * @author	$Author:  $
 * @version	$Revision:  $
 */

 //	Add your own constant definitions here.
 //-----------------------------------------------


namespace FitGaussian_ns
{

/**
 * Class Description:
 * Compute a Gaussian Fit according to Levenberg Marquardt method
 */

/*
 *	Device States Description:
*  Tango::STANDBY :
*  Tango::RUNNING :
*  Tango::FAULT :
 */


class FitGaussian: public Tango::Device_4Impl
{
public :
	//	Add your own data members here
	//-----------------------------------------


	//	Here is the Start of the automatic code generation part
	//-------------------------------------------------------------	
/**
 *	@name attributes
 *	Attribute member data.
 */
//@{
		Tango::DevString	*attr_version_read;
		Tango::DevString	*attr_operationType_read;
		Tango::DevBoolean	attr_AutoROIEnabled_write;
		Tango::DevBoolean	*attr_AutoROIFound_read;
		Tango::DevLong	*attr_AutoROIOriginX_read;
		Tango::DevLong	*attr_AutoROIOriginY_read;
		Tango::DevLong	*attr_AutoROIWidth_read;
		Tango::DevLong	*attr_AutoROIHeight_read;
		Tango::DevBoolean	attr_XProjEnabled_write;
		Tango::DevBoolean	*attr_XProjFitConverged_read;
		Tango::DevDouble	*attr_XProjFitCenter_read;
		Tango::DevDouble	*attr_XProjFitMag_read;
		Tango::DevDouble	*attr_XProjFitSigma_read;
		Tango::DevDouble	*attr_XProjFitFWHM_read;
		Tango::DevDouble	*attr_XProjFitBG_read;
		Tango::DevDouble	*attr_XProjFitChi2_read;
		Tango::DevULong	*attr_XProjFitNbIter_read;
		Tango::DevString	*attr_XProjPushTime_read;
		Tango::DevBoolean	attr_YProjEnabled_write;
		Tango::DevBoolean	*attr_YProjFitConverged_read;
		Tango::DevDouble	*attr_YProjFitCenter_read;
		Tango::DevDouble	*attr_YProjFitMag_read;
		Tango::DevDouble	*attr_YProjFitSigma_read;
		Tango::DevDouble	*attr_YProjFitFWHM_read;
		Tango::DevDouble	*attr_YProjFitBG_read;
		Tango::DevDouble	*attr_YProjFitChi2_read;
		Tango::DevULong	*attr_YProjFitNbIter_read;
		Tango::DevString	*attr_YProjPushTime_read;
		Tango::DevString	*attr_operationList_read;
		Tango::DevDouble	*attr_XProj_read;
		Tango::DevDouble	*attr_XProjFitted_read;
		Tango::DevDouble	*attr_YProj_read;
		Tango::DevDouble	*attr_YProjFitted_read;
		Tango::DevUShort	*attr_ROIImage_read;
//@}

/**
 * @name Device properties
 * Device properties member data.
 */
//@{
/**
 *	
 */
	Tango::DevBoolean	autoROIEnabled;
/**
 *	
 */
	Tango::DevDouble	autoROIMagnificationFactorX;
/**
 *	
 */
	Tango::DevDouble	autoROIMagnificationFactorY;
/**
 *	
 */
	Tango::DevDouble	pixelSizeX;
/**
 *	
 */
	Tango::DevDouble	pixelSizeY;
/**
 *	
 */
	Tango::DevDouble	opticalMagnification;
/**
 *	
 */
	Tango::DevShort	fitNbIterationsMax;
/**
 *	
 */
	Tango::DevDouble	fitTolerance;
/**
 *	Memorize all operationType declared in the order to process the image.
 */
	string	memorizedOperationType;
/**
 *	Memorize all levels associated to the operationType declared in the order to process the image.
 */
	Tango::DevLong	memorizedOperationLevel;
/**
 *	
 */
	Tango::DevBoolean	xProjEnabled;
/**
 *	
 */
	Tango::DevBoolean	yProjEnabled;
/**
 *	
 */
	Tango::DevBoolean	profileFitFixedBg;
//@}

/**
 *	@name Device properties
 *	Device property member data.
 */
//@{
//@}

/**@name Constructors
 * Miscellaneous constructors */
//@{
/**
 * Constructs a newly allocated Command object.
 *
 *	@param cl	Class.
 *	@param s 	Device Name
 */
	FitGaussian(Tango::DeviceClass *cl,string &s);
/**
 * Constructs a newly allocated Command object.
 *
 *	@param cl	Class.
 *	@param s 	Device Name
 */
	FitGaussian(Tango::DeviceClass *cl,const char *s);
/**
 * Constructs a newly allocated Command object.
 *
 *	@param cl	Class.
 *	@param s 	Device name
 *	@param d	Device description.
 */
	FitGaussian(Tango::DeviceClass *cl,const char *s,const char *d);
//@}

/**@name Destructor
 * Only one destructor is defined for this class */
//@{
/**
 * The object destructor.
 */	
	~FitGaussian() {delete_device();};
/**
 *	will be called at device destruction or at init command.
 */
	void delete_device();
//@}

	
/**@name Miscellaneous methods */
//@{
/**
 *	Initialize the device
 */
	virtual void init_device();
/**
 *	Always executed method before execution command method.
 */
	virtual void always_executed_hook();

//@}

/**
 * @name FitGaussian methods prototypes
 */

//@{
/**
 *	Hardware acquisition for attributes.
 */
	virtual void read_attr_hardware(vector<long> &attr_list);
/**
 *	Extract real attribute values for version acquisition result.
 */
	virtual void read_version(Tango::Attribute &attr);
/**
 *	Extract real attribute values for operationType acquisition result.
 */
	virtual void read_operationType(Tango::Attribute &attr);
/**
 *	Extract real attribute values for AutoROIEnabled acquisition result.
 */
	virtual void read_AutoROIEnabled(Tango::Attribute &attr);
/**
 *	Write AutoROIEnabled attribute values to hardware.
 */
	virtual void write_AutoROIEnabled(Tango::WAttribute &attr);
/**
 *	Extract real attribute values for AutoROIFound acquisition result.
 */
	virtual void read_AutoROIFound(Tango::Attribute &attr);
/**
 *	Extract real attribute values for AutoROIOriginX acquisition result.
 */
	virtual void read_AutoROIOriginX(Tango::Attribute &attr);
/**
 *	Extract real attribute values for AutoROIOriginY acquisition result.
 */
	virtual void read_AutoROIOriginY(Tango::Attribute &attr);
/**
 *	Extract real attribute values for AutoROIWidth acquisition result.
 */
	virtual void read_AutoROIWidth(Tango::Attribute &attr);
/**
 *	Extract real attribute values for AutoROIHeight acquisition result.
 */
	virtual void read_AutoROIHeight(Tango::Attribute &attr);
/**
 *	Extract real attribute values for XProjEnabled acquisition result.
 */
	virtual void read_XProjEnabled(Tango::Attribute &attr);
/**
 *	Write XProjEnabled attribute values to hardware.
 */
	virtual void write_XProjEnabled(Tango::WAttribute &attr);
/**
 *	Extract real attribute values for XProjFitConverged acquisition result.
 */
	virtual void read_XProjFitConverged(Tango::Attribute &attr);
/**
 *	Extract real attribute values for XProjFitCenter acquisition result.
 */
	virtual void read_XProjFitCenter(Tango::Attribute &attr);
/**
 *	Extract real attribute values for XProjFitMag acquisition result.
 */
	virtual void read_XProjFitMag(Tango::Attribute &attr);
/**
 *	Extract real attribute values for XProjFitSigma acquisition result.
 */
	virtual void read_XProjFitSigma(Tango::Attribute &attr);
/**
 *	Extract real attribute values for XProjFitFWHM acquisition result.
 */
	virtual void read_XProjFitFWHM(Tango::Attribute &attr);
/**
 *	Extract real attribute values for XProjFitBG acquisition result.
 */
	virtual void read_XProjFitBG(Tango::Attribute &attr);
/**
 *	Extract real attribute values for XProjFitChi2 acquisition result.
 */
	virtual void read_XProjFitChi2(Tango::Attribute &attr);
/**
 *	Extract real attribute values for XProjFitNbIter acquisition result.
 */
	virtual void read_XProjFitNbIter(Tango::Attribute &attr);
/**
 *	Extract real attribute values for XProjPushTime acquisition result.
 */
	virtual void read_XProjPushTime(Tango::Attribute &attr);
/**
 *	Extract real attribute values for YProjEnabled acquisition result.
 */
	virtual void read_YProjEnabled(Tango::Attribute &attr);
/**
 *	Write YProjEnabled attribute values to hardware.
 */
	virtual void write_YProjEnabled(Tango::WAttribute &attr);
/**
 *	Extract real attribute values for YProjFitConverged acquisition result.
 */
	virtual void read_YProjFitConverged(Tango::Attribute &attr);
/**
 *	Extract real attribute values for YProjFitCenter acquisition result.
 */
	virtual void read_YProjFitCenter(Tango::Attribute &attr);
/**
 *	Extract real attribute values for YProjFitMag acquisition result.
 */
	virtual void read_YProjFitMag(Tango::Attribute &attr);
/**
 *	Extract real attribute values for YProjFitSigma acquisition result.
 */
	virtual void read_YProjFitSigma(Tango::Attribute &attr);
/**
 *	Extract real attribute values for YProjFitFWHM acquisition result.
 */
	virtual void read_YProjFitFWHM(Tango::Attribute &attr);
/**
 *	Extract real attribute values for YProjFitBG acquisition result.
 */
	virtual void read_YProjFitBG(Tango::Attribute &attr);
/**
 *	Extract real attribute values for YProjFitChi2 acquisition result.
 */
	virtual void read_YProjFitChi2(Tango::Attribute &attr);
/**
 *	Extract real attribute values for YProjFitNbIter acquisition result.
 */
	virtual void read_YProjFitNbIter(Tango::Attribute &attr);
/**
 *	Extract real attribute values for YProjPushTime acquisition result.
 */
	virtual void read_YProjPushTime(Tango::Attribute &attr);
/**
 *	Extract real attribute values for operationList acquisition result.
 */
	virtual void read_operationList(Tango::Attribute &attr);
/**
 *	Extract real attribute values for XProj acquisition result.
 */
	virtual void read_XProj(Tango::Attribute &attr);
/**
 *	Extract real attribute values for XProjFitted acquisition result.
 */
	virtual void read_XProjFitted(Tango::Attribute &attr);
/**
 *	Extract real attribute values for YProj acquisition result.
 */
	virtual void read_YProj(Tango::Attribute &attr);
/**
 *	Extract real attribute values for YProjFitted acquisition result.
 */
	virtual void read_YProjFitted(Tango::Attribute &attr);
/**
 *	Extract real attribute values for ROIImage acquisition result.
 */
	virtual void read_ROIImage(Tango::Attribute &attr);
/**
 *	Read/Write allowed for version attribute.
 */
	virtual bool is_version_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for operationType attribute.
 */
	virtual bool is_operationType_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for AutoROIEnabled attribute.
 */
	virtual bool is_AutoROIEnabled_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for AutoROIFound attribute.
 */
	virtual bool is_AutoROIFound_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for AutoROIOriginX attribute.
 */
	virtual bool is_AutoROIOriginX_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for AutoROIOriginY attribute.
 */
	virtual bool is_AutoROIOriginY_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for AutoROIWidth attribute.
 */
	virtual bool is_AutoROIWidth_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for AutoROIHeight attribute.
 */
	virtual bool is_AutoROIHeight_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for XProjEnabled attribute.
 */
	virtual bool is_XProjEnabled_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for XProjFitConverged attribute.
 */
	virtual bool is_XProjFitConverged_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for XProjFitCenter attribute.
 */
	virtual bool is_XProjFitCenter_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for XProjFitMag attribute.
 */
	virtual bool is_XProjFitMag_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for XProjFitSigma attribute.
 */
	virtual bool is_XProjFitSigma_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for XProjFitFWHM attribute.
 */
	virtual bool is_XProjFitFWHM_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for XProjFitBG attribute.
 */
	virtual bool is_XProjFitBG_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for XProjFitChi2 attribute.
 */
	virtual bool is_XProjFitChi2_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for XProjFitNbIter attribute.
 */
	virtual bool is_XProjFitNbIter_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for XProjPushTime attribute.
 */
	virtual bool is_XProjPushTime_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for YProjEnabled attribute.
 */
	virtual bool is_YProjEnabled_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for YProjFitConverged attribute.
 */
	virtual bool is_YProjFitConverged_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for YProjFitCenter attribute.
 */
	virtual bool is_YProjFitCenter_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for YProjFitMag attribute.
 */
	virtual bool is_YProjFitMag_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for YProjFitSigma attribute.
 */
	virtual bool is_YProjFitSigma_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for YProjFitFWHM attribute.
 */
	virtual bool is_YProjFitFWHM_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for YProjFitBG attribute.
 */
	virtual bool is_YProjFitBG_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for YProjFitChi2 attribute.
 */
	virtual bool is_YProjFitChi2_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for YProjFitNbIter attribute.
 */
	virtual bool is_YProjFitNbIter_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for YProjPushTime attribute.
 */
	virtual bool is_YProjPushTime_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for operationList attribute.
 */
	virtual bool is_operationList_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for XProj attribute.
 */
	virtual bool is_XProj_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for XProjFitted attribute.
 */
	virtual bool is_XProjFitted_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for YProj attribute.
 */
	virtual bool is_YProj_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for YProjFitted attribute.
 */
	virtual bool is_YProjFitted_allowed(Tango::AttReqType type);
/**
 *	Read/Write allowed for ROIImage attribute.
 */
	virtual bool is_ROIImage_allowed(Tango::AttReqType type);
/**
 * This command gets the device state (stored in its <i>device_state</i> data member) and returns it to the caller.
 *	@return	State Code
 *	@exception DevFailed
 */
	virtual Tango::DevState	dev_state();

/**
 *	Read the device properties from database
 */
	 void get_device_property();
//@}

	//	Here is the end of the automatic code generation part
	//-------------------------------------------------------------	
	// return true if the device is correctly initialized in init_device

	bool is_device_initialized()
	{
		return m_is_device_initialized;
	};

	void delete_external_operation(long level);
	void add_external_operation(long level);
	void* get_data_ptr(const cv::Mat& img);

protected :	
	//	Add your own data members here
	//-----------------------------------------
	struct operationParams
	{
		std::string opId;
		std::string operationType;
		std::string operationValue;
	};	

	bool                            	m_is_device_initialized;
	//Operations objects
	std::stringstream               	m_status_message;
	std::string                     	m_operation_type;
	std::map<long, operationParams >    m_map_operations; 
	FitTask*        					m_fit_task;
	std::vector<Tango::DevDouble> 		m_xproj_cache;
	std::vector<Tango::DevDouble> 		m_xproj_fitted_cache;
	std::vector<Tango::DevDouble> 		m_yproj_cache;
	std::vector<Tango::DevDouble> 		m_yproj_fitted_cache;
	cv::Mat								m_roi_img_cache; 
        
	//LIMA objects
	lima::CtControl*               		m_ct;

};

}	// namespace_ns

#endif	// _FITGAUSSIAN_H
